--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           >
         </h1>
         <!-- BUTTON -->
-        <a href="#" class="button button-accent">See our work</a>
+        <a href="#" class="button button-accent">Apžiūrėti</a>
       </div>
     </section>
 
