--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Responsive su Kevin Powel html 5</title>
   </head>
   <body>
