--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
       <figure class="port-item">
         <img src="img/opel.jpg" alt="opelis" />
         <figcaption class="port-desc">
-          <p>Projekto title 1</p>
+          <p>Vairavimo kursai 1</p>
           <a href="" class="button button-accent button-small"
-            >See project details</a
+            >Peržiūrėti pasiūlymus</a
           >
         </figcaption>
       </figure>
@@ -97,9 +97,9 @@
       <figure class="port-item">
         <img src="img/woman.jpg" alt="mergina su kava" />
         <figcaption class="port-desc">
-          <p>Projekto title 2</p>
+          <p>Laisvalaikis 2</p>
           <a href="" class="button button-accent button-small"
-            >See project details</a
+            >Peržiūrėti pasiūlymus</a
           >
         </figcaption>
       </figure>
@@ -110,9 +110,9 @@
       <figure class="port-item">
         <img src="img/meskas.jpg" alt="pokemonas" />
         <figcaption class="port-desc">
-          <p>Projekto title 3</p>
+          <p>Užimtumo tarnyba 3</p>
           <a href="" class="button button-accent button-small"
-            >See project details</a
+            >Peržiūrėti pasiūlymus</a
           >
         </figcaption>
       </figure>
@@ -123,9 +123,9 @@
       <figure class="port-item">
         <img src="img/earlyMorning.jpg" alt="abstrakcija" />
         <figcaption class="port-desc">
-          <p>Projekto title 4</p>
+          <p>Molėtų observatorija 4</p>
           <a href="" class="button button-accent button-small"
-            >See project details</a
+            >Peržiūrėti pasiūlymus</a
           >
         </figcaption>
       </figure>
@@ -136,9 +136,9 @@
       <figure class="port-item">
         <img src="img/foto 8.jpg" alt="abstrakcija" />
         <figcaption class="port-desc">
-          <p>Projekto title 5</p>
+          <p>Miestas vasara 5</p>
           <a href="" class="button button-accent button-small"
-            >See project details</a
+            >Peržiūrėti pasiūlymus</a
           >
         </figcaption>
       </figure>
@@ -149,9 +149,9 @@
       <figure class="port-item">
         <img src="img/rainStreet.jpg" alt="abstrakcija" />
         <figcaption class="port-desc">
-          <p>Projekto title 6</p>
+          <p>Dviračių takai 6</p>
           <a href="" class="button button-accent button-small"
-            >See project details</a
+            >Peržiūrėti pasiūlymus</a
           >
         </figcaption>
       </figure>
