--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700;900&display=swap"
       rel="stylesheet"
     />
-    <!-- <link rel="stylesheet" href="style.css" /> -->
     <link rel="stylesheet" href="css/main.css" />
     <title>Responsive su Kevin Powel html 5</title>
   </head>
@@ -78,7 +77,6 @@
 
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
-      <!-- portfolio item: 01 -->
       <figure class="port-item">
         <img src="img/opel.jpg" alt="opelis" />
         <figcaption class="port-desc">
@@ -91,9 +89,6 @@
 
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
-      <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-
-      <!-- portfolio item: 02 -->
       <figure class="port-item">
         <img src="img/woman.jpg" alt="mergina su kava" />
         <figcaption class="port-desc">
@@ -106,7 +101,6 @@
 
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
-      <!-- portfolio item: 03 -->
       <figure class="port-item">
         <img src="img/meskas.jpg" alt="pokemonas" />
         <figcaption class="port-desc">
@@ -119,7 +113,6 @@
 
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
-      <!-- portfolio item: 04 -->
       <figure class="port-item">
         <img src="img/earlyMorning.jpg" alt="abstrakcija" />
         <figcaption class="port-desc">
@@ -132,7 +125,6 @@
 
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
-      <!-- portfolio item: 05 -->
       <figure class="port-item">
         <img src="img/foto 8.jpg" alt="abstrakcija" />
         <figcaption class="port-desc">
@@ -145,7 +137,6 @@
 
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
-      <!-- portfolio item: 06 -->
       <figure class="port-item">
         <img src="img/rainStreet.jpg" alt="abstrakcija" />
         <figcaption class="port-desc">
@@ -164,8 +155,8 @@
     <section class="cta">
       <div class="container">
         <h1 class="title title-cta">
-          Paprasta žalia sekcija
-          <span>Penkta dalis: Šiaip jau yra ketvirta dalis</span>
+          Paprasta, žalios spalvos dalis
+          <span>Ketvirta dalis: su SPAN elementu šioje eilutėje</span>
         </h1>
         <a href="#" class="button button-dark">Žiūrėti</a>
       </div>
@@ -191,7 +182,7 @@
 
         <div class="col-1">
           <ul class="unstyled-list">
-            <li><strong> Pirmas penketukas</strong></li>
+            <li><strong>Lietuvos miestai</strong></li>
             <li>Vilnius</li>
             <li>Kaunas</li>
             <li>Klaipėda</li>
@@ -204,7 +195,7 @@
 
         <div class="col-1">
           <ul class="unstyled-list">
-            <li><strong>Antras penketukas</strong></li>
+            <li><strong>Lietuvos miestai</strong></li>
             <li>Alytus</li>
             <li>Marijampolė</li>
             <li>Mažeikiai</li>
@@ -217,7 +208,7 @@
 
         <div class="col-1">
           <ul class="unstyled-list">
-            <li><strong>Trecias penketukas</strong></li>
+            <li><strong>Lietuvos miestai</strong></li>
             <li>Kėdainiai</li>
             <li>Tauragė</li>
             <li>Telšiai</li>
