--- a/index.html
+++ b/index.html
@@ -36,11 +36,8 @@
     <section class="home-hero parallax--bg">
       <div class="container">
         <h1 class="title parallax--box">
-          Pirma ir antra dalys kartu.<span>
-            Pirma dalis yra NAV, antra dalis - užrašas ir mygtukas</span
-          >
+          Pirma dalis<span> NAV nuorodos ir užrašas su mygtuku</span>
         </h1>
-        <!-- BUTTON -->
         <a href="#" class="button button-accent">Apžiūrėti</a>
       </div>
     </section>
@@ -52,7 +49,7 @@
     <div class="container">
       <section class="home-about">
         <div class="home-about-textbox parallax--box">
-          <h1>Trecia dalis</h1>
+          <h1>Antra dalis</h1>
           <p>
             Su Kevino pagalba studijuojame HTML5. Pirma dalis bus NAV su menu
             nuorodom. Truputį žemiau bus antra dalis su užrašu ir mažesnėmis
@@ -73,7 +70,7 @@
     <!-- --------------------------------------------------------- -->
 
     <section class="portfolio">
-      <h1>Ketvirta dalis: Nuotraukų GRID išdėstymas</h1>
+      <h1>Trečia dalis: Nuotraukų GRID išdėstymas</h1>
 
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
