--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
       <figure class="port-item">
-        <img src="img/opel.jpg" alt="opelis" />
+        <img src="img/fantastAugalai.jpg" alt="opelis" />
         <figcaption class="port-desc">
           <p>Vairavimo kursai 1</p>
           <a href="" class="button button-accent button-small"
@@ -87,7 +87,7 @@
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
       <figure class="port-item">
-        <img src="img/woman.jpg" alt="mergina su kava" />
+        <img src="img/medziaiEzeras.jpg" alt="mergina su kava" />
         <figcaption class="port-desc">
           <p>Laisvalaikis 2</p>
           <a href="" class="button button-accent button-small"
@@ -99,7 +99,7 @@
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
       <figure class="port-item">
-        <img src="img/meskas.jpg" alt="pokemonas" />
+        <img src="img/kalnuAtspindys.jpg" alt="pokemonas" />
         <figcaption class="port-desc">
           <p>Užimtumo tarnyba 3</p>
           <a href="" class="button button-accent button-small"
@@ -111,7 +111,7 @@
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
       <figure class="port-item">
-        <img src="img/earlyMorning.jpg" alt="abstrakcija" />
+        <img src="img/kalnuEzeras.jpg" alt="abstrakcija" />
         <figcaption class="port-desc">
           <p>Molėtų observatorija 4</p>
           <a href="" class="button button-accent button-small"
@@ -123,7 +123,7 @@
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
       <figure class="port-item">
-        <img src="img/foto 8.jpg" alt="abstrakcija" />
+        <img src="img/kalnuPereja.jpg" alt="abstrakcija" />
         <figcaption class="port-desc">
           <p>Miestas vasara 5</p>
           <a href="" class="button button-accent button-small"
@@ -135,7 +135,7 @@
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
       <figure class="port-item">
-        <img src="img/rainStreet.jpg" alt="abstrakcija" />
+        <img src="img/krioklys.jpg" alt="abstrakcija" />
         <figcaption class="port-desc">
           <p>Dviračių takai 6</p>
           <a href="" class="button button-accent button-small"
