--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
       <figure class="port-item">
-        <img src="img/krioklys.jpg" alt="abstrakcija" />
+        <img src="img/tylaEzeras.jpg" alt="abstrakcija" />
         <figcaption class="port-desc">
           <p>Dviračių takai 6</p>
           <a href="" class="button button-accent button-small"
