--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/main.css" />
+
     <title>Responsive su Kevin Powel html 5</title>
   </head>
   <body>
@@ -77,10 +78,8 @@
       <figure class="port-item">
         <img src="img/fantastAugalai.jpg" alt="opelis" />
         <figcaption class="port-desc">
-          <p>Vairavimo kursai 1</p>
-          <a href="" class="button button-accent button-small"
-            >Peržiūrėti pasiūlymus</a
-          >
+          <p>Nuostabūs augalai 1</p>
+          <a href="" class="button button-accent button-small">toliau</a>
         </figcaption>
       </figure>
 
@@ -90,9 +89,7 @@
         <img src="img/medziaiEzeras.jpg" alt="mergina su kava" />
         <figcaption class="port-desc">
           <p>Laisvalaikis 2</p>
-          <a href="" class="button button-accent button-small"
-            >Peržiūrėti pasiūlymus</a
-          >
+          <a href="" class="button button-accent button-small">toliau</a>
         </figcaption>
       </figure>
 
@@ -101,10 +98,8 @@
       <figure class="port-item">
         <img src="img/kalnuAtspindys.jpg" alt="pokemonas" />
         <figcaption class="port-desc">
-          <p>Užimtumo tarnyba 3</p>
-          <a href="" class="button button-accent button-small"
-            >Peržiūrėti pasiūlymus</a
-          >
+          <p>Ežeras prie kalnų 3</p>
+          <a href="" class="button button-accent button-small">toliau</a>
         </figcaption>
       </figure>
 
@@ -113,10 +108,8 @@
       <figure class="port-item">
         <img src="img/kalnuEzeras.jpg" alt="abstrakcija" />
         <figcaption class="port-desc">
-          <p>Molėtų observatorija 4</p>
-          <a href="" class="button button-accent button-small"
-            >Peržiūrėti pasiūlymus</a
-          >
+          <p>Kalnų upė 4</p>
+          <a href="" class="button button-accent button-small">toliau</a>
         </figcaption>
       </figure>
 
@@ -125,10 +118,8 @@
       <figure class="port-item">
         <img src="img/kalnuPereja.jpg" alt="abstrakcija" />
         <figcaption class="port-desc">
-          <p>Miestas vasara 5</p>
-          <a href="" class="button button-accent button-small"
-            >Peržiūrėti pasiūlymus</a
-          >
+          <p>Kalnų masyvas 5</p>
+          <a href="" class="button button-accent button-small">toliau</a>
         </figcaption>
       </figure>
 
@@ -137,10 +128,8 @@
       <figure class="port-item">
         <img src="img/tylaEzeras.jpg" alt="abstrakcija" />
         <figcaption class="port-desc">
-          <p>Dviračių takai 6</p>
-          <a href="" class="button button-accent button-small"
-            >Peržiūrėti pasiūlymus</a
-          >
+          <p>Atspindys ežere 6</p>
+          <a href="" class="button button-accent button-small">toliau</a>
         </figcaption>
       </figure>
     </section>
